@@ -4,7 +4,7 @@
  'colwidths': [69, 135, 90, 55, 73, 69, 76, 97, 71, 49],
  'crypto': '',
  'data_chan_type': 'u',
- 'dl_dir': '/home/jeff/p2p/sumi/incoming/',
+ 'dl_dir': 'X:/p2p/sumi/incoming',
  'irc_nick': 'sumiget',
  'maxwait': 7,
  'mss': 1472,
