@@ -12,12 +12,12 @@
              'size': 60241920L},
             {'desc': '16000-byte Test',
              'fn': '/home/jeff/p2p/sumi/share/lptest',
-             'gets': 15,
+             'gets': 16,
              'hsize': '15k',
              'size': 16000L},
             {'desc': 'ONE MEG TEST',
              'fn': '/home/jeff/p2p/sumi/share/1mb',
-             'gets': 2,
+             'gets': 3,
              'hsize': '1.0M',
              'size': 1048576L},
             {'desc': '\x02Five Megabytes\x02',
